[package]
name = "gym-count"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-actix-web = "0.7"
color-eyre = "0.6"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "charset",
    "rustls-tls",
] }

scraper = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4"
